--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,56 @@
-@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Playfair+Display:wght@700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Playfair+Display:wght@700;800;900&display=swap"); */
+
+@font-face {
+  font-display: swap;
+  font-family: "Lora";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/lora-v32-latin-regular.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Lora";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/lora-v32-latin-500.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Lora";
+  font-style: normal;
+  font-weight: 600;
+  src: url("/fonts/lora-v32-latin-600.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Lora";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/lora-v32-latin-700.woff2") format("woff2");
+}
+
+/* Playfair Display */
+@font-face {
+  font-display: swap;
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 700;
+  src: url("/fonts/playfair-display-v30-latin-700.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 800;
+  src: url("/fonts/playfair-display-v30-latin-800.woff2") format("woff2");
+}
+@font-face {
+  font-display: swap;
+  font-family: "Playfair Display";
+  font-style: normal;
+  font-weight: 900;
+  src: url("/fonts/playfair-display-v30-latin-900.woff2") format("woff2");
+}
 
 @tailwind base;
 @tailwind components;
