--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Playfair+Display:wght@700;800;900&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Playfair+Display:wght@700;800;900&display=swap");
 
-@font-face {
+/* @font-face {
   font-display: swap;
   font-family: "Lora";
   font-style: normal;
@@ -27,10 +27,10 @@
   font-style: normal;
   font-weight: 700;
   src: url("/fonts/lora-v32-latin-700.woff2") format("woff2");
-}
+} */
 
 /* Playfair Display */
-@font-face {
+/* @font-face {
   font-display: swap;
   font-family: "Playfair Display";
   font-style: normal;
@@ -50,7 +50,7 @@
   font-style: normal;
   font-weight: 900;
   src: url("/fonts/playfair-display-v30-latin-900.woff2") format("woff2");
-}
+} */
 
 @tailwind base;
 @tailwind components;
