--- a/client/src/index.css
+++ b/client/src/index.css
@@ -260,12 +260,14 @@
     transform: rotate(360deg);
   }
 }
+[data-radix-dialog-overlay] {
+  pointer-events: none !important;
+}
+
+[data-radix-dialog-content] {
+  pointer-events: auto !important;
+}
+
 #cookiescript_injected {
-  position: fixed !important;
-  bottom: 0 !important;
-  left: 0 !important;
-  right: 0 !important;
-  width: 100% !important;
-  height: auto !important;
   z-index: 2147483647 !important;
 }
